package menuprincipal.battleship.plateau;

public enum Case {
    AUCUN,
    RATE,
    TOUCHE,
    COULE,
    BATEAU,
}
